[package]
name = "mojxml-rs"
authors = ["Keitaroh Kobayashi <keita@kotobamedia.com>"]
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
crossbeam-channel = "0.5.15"
flatgeobuf = "4.6.0"
geo-types = "0.7.16"
geozero = "0.14.0"
indicatif = "0.17.11"
log = "0.4.27"
num_cpus = "1.16.0"
once_cell = "1.19.0"
proj4rs = "0.1.5"
roxmltree = "0.20.0"
simplelog = "0.12.2"
tempfile = "3.19.1"
thiserror = "1.0.63"
zip = "2.6.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0" }

[profile.release]
# debug = true
codegen-units = 1
lto = false
panic = "abort"
